fixing issue on ios

--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -110,7 +110,9 @@ body {
 .calendar {
   width: 100%;
   height: auto;
+  margin: 0 auto;
   img {
+    display: block;
     max-width: 100%;
     max-height: 100%;
   }
